--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -377,8 +377,8 @@
         <ul class="phpdocumentor-list">
                     <li><a href="../files/src-realtime-handler-handlerexception.html"><abbr title="src/Realtime/Handler/HandlerException.php">HandlerException.php</abbr></a></li>
                     <li><a href="../files/src-realtime-handlerinterface.html"><abbr title="src/Realtime/HandlerInterface.php">HandlerInterface.php</abbr></a></li>
-                    <li><a href="../files/src-request-hashtag.html"><abbr title="src/Request/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-hashtag.html"><abbr title="src/Response/Model/Hashtag.php">Hashtag.php</abbr></a></li>
+                    <li><a href="../files/src-request-hashtag.html"><abbr title="src/Request/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-hashtagfollow.html"><abbr title="src/Response/Model/HashtagFollow.php">HashtagFollow.php</abbr></a></li>
                     <li><a href="../files/src-response-hashtagsresponse.html"><abbr title="src/Response/HashtagsResponse.php">HashtagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-headline.html"><abbr title="src/Response/Model/Headline.php">Headline.php</abbr></a></li>
@@ -393,8 +393,8 @@
                     <li><a href="../files/src-response-model-ioslinks.html"><abbr title="src/Response/Model/IOSLinks.php">IOSLinks.php</abbr></a></li>
                     <li><a href="../files/src-response-model-iabautofilloptoutinfo.html"><abbr title="src/Response/Model/IabAutofillOptoutInfo.php">IabAutofillOptoutInfo.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-ieforcesetnewpasswordformexception.html"><abbr title="src/Exception/Checkpoint/IeForceSetNewPasswordFormException.php">IeForceSetNewPasswordFormException.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-image.html"><abbr title="src/Response/Model/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-image.html"><abbr title="src/Response/Model/Bloks/Image.php">Image.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-image.html"><abbr title="src/Response/Model/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-imagecandidate.html"><abbr title="src/Response/Model/ImageCandidate.php">ImageCandidate.php</abbr></a></li>
                     <li><a href="../files/src-response-model-image-versions2.html"><abbr title="src/Response/Model/Image_Versions2.php">Image_Versions2.php</abbr></a></li>
                     <li><a href="../files/src-response-model-in.html"><abbr title="src/Response/Model/In.php">In.php</abbr></a></li>
@@ -812,6 +812,7 @@
                     <li><a href="../files/src-exception-checkpoint-verifycodeexception.html"><abbr title="src/Exception/Checkpoint/VerifyCodeException.php">VerifyCodeException.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-verifyemailcodeformexception.html"><abbr title="src/Exception/Checkpoint/VerifyEmailCodeFormException.php">VerifyEmailCodeFormException.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-verifyemailexception.html"><abbr title="src/Exception/Checkpoint/VerifyEmailException.php">VerifyEmailException.php</abbr></a></li>
+                    <li><a href="../files/src-exception-checkpoint-verifysmscodeformexception.html"><abbr title="src/Exception/Checkpoint/VerifySMSCodeFormException.php">VerifySMSCodeFormException.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-verifysmscodeformforsmscaptchaexception.html"><abbr title="src/Exception/Checkpoint/VerifySMSCodeFormForSMSCaptchaException.php">VerifySMSCodeFormForSMSCaptchaException.php</abbr></a></li>
                     <li><a href="../files/src-response-verifysmscoderesponse.html"><abbr title="src/Response/VerifySMSCodeResponse.php">VerifySMSCodeResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-videocallevent.html"><abbr title="src/Response/Model/VideoCallEvent.php">VideoCallEvent.php</abbr></a></li>
