--- a/documentation/packages/default.html
+++ b/documentation/packages/default.html
@@ -1492,6 +1492,8 @@ to-string and from-string methods in this class are consistent.</dd>
                 <dd>SegmentationModels.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-SegmentationModelsResponse.html"><abbr title="\InstagramAPI\Response\SegmentationModelsResponse">SegmentationModelsResponse</abbr></a></dt>
                 <dd>SegmentationModelsResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-VerifySMSCodeFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\VerifySMSCodeFormException">VerifySMSCodeFormException</abbr></a></dt>
+                <dd>All server-response API related exceptions must derive from this class.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
