--- a/documentation/namespaces/instagramapi-exception-checkpoint.html
+++ b/documentation/namespaces/instagramapi-exception-checkpoint.html
@@ -127,6 +127,8 @@
                 <dd>All server-response API related exceptions must derive from this class.</dd>
                             <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-VerifySMSCodeFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\VerifySMSCodeFormException">VerifySMSCodeFormException</abbr></a></dt>
                 <dd>All server-response API related exceptions must derive from this class.</dd>
+                            <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-LegacyForceSetNewPasswordFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\LegacyForceSetNewPasswordFormException">LegacyForceSetNewPasswordFormException</abbr></a></dt>
+                <dd>All server-response API related exceptions must derive from this class.</dd>
             
                     </dl>
     
