--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -198,8 +198,8 @@
                     <li><a href="../files/src-response-model-closefriends.html"><abbr title="src/Response/Model/CloseFriends.php">CloseFriends.php</abbr></a></li>
                     <li><a href="../files/src-response-closefriendsresponse.html"><abbr title="src/Response/CloseFriendsResponse.php">CloseFriendsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-cluster.html"><abbr title="src/Response/Model/Cluster.php">Cluster.php</abbr></a></li>
-                    <li><a href="../files/src-request-collection.html"><abbr title="src/Request/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-collection.html"><abbr title="src/Response/Model/Bloks/Collection.php">Collection.php</abbr></a></li>
+                    <li><a href="../files/src-request-collection.html"><abbr title="src/Request/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-model-collection.html"><abbr title="src/Response/Model/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-collectionfeedresponse.html"><abbr title="src/Response/CollectionFeedResponse.php">CollectionFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-realtime-commandinterface.html"><abbr title="src/Realtime/CommandInterface.php">CommandInterface.php</abbr></a></li>
@@ -236,8 +236,8 @@
                     <li><a href="../files/src-response-createhighlightresponse.html"><abbr title="src/Response/CreateHighlightResponse.php">CreateHighlightResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createliveresponse.html"><abbr title="src/Response/CreateLiveResponse.php">CreateLiveResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-createserieresponse.html"><abbr title="src/Response/CreateSerieResponse.php">CreateSerieResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-creative.html"><abbr title="src/Request/Creative.php">Creative.php</abbr></a></li>
                     <li><a href="../files/src-response-model-creative.html"><abbr title="src/Response/Model/Creative.php">Creative.php</abbr></a></li>
+                    <li><a href="../files/src-request-creative.html"><abbr title="src/Request/Creative.php">Creative.php</abbr></a></li>
                 </ul>
                                     <h3>D</h3>
         <ul class="phpdocumentor-list">
@@ -393,8 +393,8 @@
                     <li><a href="../files/src-response-model-ioslinks.html"><abbr title="src/Response/Model/IOSLinks.php">IOSLinks.php</abbr></a></li>
                     <li><a href="../files/src-response-model-iabautofilloptoutinfo.html"><abbr title="src/Response/Model/IabAutofillOptoutInfo.php">IabAutofillOptoutInfo.php</abbr></a></li>
                     <li><a href="../files/src-exception-checkpoint-ieforcesetnewpasswordformexception.html"><abbr title="src/Exception/Checkpoint/IeForceSetNewPasswordFormException.php">IeForceSetNewPasswordFormException.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-bloks-image.html"><abbr title="src/Response/Model/Bloks/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-image.html"><abbr title="src/Response/Model/Image.php">Image.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-bloks-image.html"><abbr title="src/Response/Model/Bloks/Image.php">Image.php</abbr></a></li>
                     <li><a href="../files/src-response-model-imagecandidate.html"><abbr title="src/Response/Model/ImageCandidate.php">ImageCandidate.php</abbr></a></li>
                     <li><a href="../files/src-response-model-image-versions2.html"><abbr title="src/Response/Model/Image_Versions2.php">Image_Versions2.php</abbr></a></li>
                     <li><a href="../files/src-response-model-in.html"><abbr title="src/Response/Model/In.php">In.php</abbr></a></li>
@@ -432,6 +432,7 @@
                     <li><a href="../files/src-response-model-bloks-layout.html"><abbr title="src/Response/Model/Bloks/Layout.php">Layout.php</abbr></a></li>
                     <li><a href="../files/src-response-model-layoutcontent.html"><abbr title="src/Response/Model/LayoutContent.php">LayoutContent.php</abbr></a></li>
                     <li><a href="../files/src-response-leastinteractedwithresponse.html"><abbr title="src/Response/LeastInteractedWithResponse.php">LeastInteractedWithResponse.php</abbr></a></li>
+                    <li><a href="../files/src-exception-checkpoint-legacyforcesetnewpasswordformexception.html"><abbr title="src/Exception/Checkpoint/LegacyForceSetNewPasswordFormException.php">LegacyForceSetNewPasswordFormException.php</abbr></a></li>
                     <li><a href="../files/src-response-likefeedresponse.html"><abbr title="src/Response/LikeFeedResponse.php">LikeFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-link.html"><abbr title="src/Response/Model/Link.php">Link.php</abbr></a></li>
                     <li><a href="../files/src-response-linkaddressbookresponse.html"><abbr title="src/Response/LinkAddressBookResponse.php">LinkAddressBookResponse.php</abbr></a></li>
@@ -444,8 +445,8 @@
                     <li><a href="../files/src-realtime-subscription-skywalker-livesubscription.html"><abbr title="src/Realtime/Subscription/Skywalker/LiveSubscription.php">LiveSubscription.php</abbr></a></li>
                     <li><a href="../files/src-response-model-livevideoshare.html"><abbr title="src/Response/Model/LiveVideoShare.php">LiveVideoShare.php</abbr></a></li>
                     <li><a href="../files/src-response-model-liveviewerinvite.html"><abbr title="src/Response/Model/LiveViewerInvite.php">LiveViewerInvite.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-location.html"><abbr title="src/Response/Model/Location.php">Location.php</abbr></a></li>
                     <li><a href="../files/src-request-location.html"><abbr title="src/Request/Location.php">Location.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-location.html"><abbr title="src/Response/Model/Location.php">Location.php</abbr></a></li>
                     <li><a href="../files/src-response-locationfeedresponse.html"><abbr title="src/Response/LocationFeedResponse.php">LocationFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-locationinforesponse.html"><abbr title="src/Response/LocationInfoResponse.php">LocationInfoResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-locationitem.html"><abbr title="src/Response/Model/LocationItem.php">LocationItem.php</abbr></a></li>
@@ -465,8 +466,8 @@
         <ul class="phpdocumentor-list">
                     <li><a href="../files/src-realtime-command-direct-markseen.html"><abbr title="src/Realtime/Command/Direct/MarkSeen.php">MarkSeen.php</abbr></a></li>
                     <li><a href="../files/src-response-model-megraphdata.html"><abbr title="src/Response/Model/MeGraphData.php">MeGraphData.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-media.html"><abbr title="src/Response/Model/Media.php">Media.php</abbr></a></li>
                     <li><a href="../files/src-request-media.html"><abbr title="src/Request/Media.php">Media.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-media.html"><abbr title="src/Response/Model/Media.php">Media.php</abbr></a></li>
                     <li><a href="../files/src-response-mediacommentrepliesresponse.html"><abbr title="src/Response/MediaCommentRepliesResponse.php">MediaCommentRepliesResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-mediacommentsresponse.html"><abbr title="src/Response/MediaCommentsResponse.php">MediaCommentsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-mediacroppinginfo.html"><abbr title="src/Response/Model/MediaCroppingInfo.php">MediaCroppingInfo.php</abbr></a></li>
@@ -557,8 +558,8 @@
                     <li><a href="../files/src-response-model-producttags.html"><abbr title="src/Response/Model/ProductTags.php">ProductTags.php</abbr></a></li>
                     <li><a href="../files/src-response-profilenoticeresponse.html"><abbr title="src/Response/ProfileNoticeResponse.php">ProfileNoticeResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-promotionsunit.html"><abbr title="src/Response/Model/PromotionsUnit.php">PromotionsUnit.php</abbr></a></li>
-                    <li><a href="../files/src-request-push.html"><abbr title="src/Request/Push.php">Push.php</abbr></a></li>
                     <li><a href="../files/src-push.html"><abbr title="src/Push.php">Push.php</abbr></a></li>
+                    <li><a href="../files/src-request-push.html"><abbr title="src/Request/Push.php">Push.php</abbr></a></li>
                     <li><a href="../files/src-response-pushpreferencesresponse.html"><abbr title="src/Response/PushPreferencesResponse.php">PushPreferencesResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-pushregisterresponse.html"><abbr title="src/Response/PushRegisterResponse.php">PushRegisterResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-pushsettings.html"><abbr title="src/Response/Model/PushSettings.php">PushSettings.php</abbr></a></li>
@@ -593,8 +594,8 @@
                     <li><a href="../files/src-response-recoveryresponse.html"><abbr title="src/Response/RecoveryResponse.php">RecoveryResponse.php</abbr></a></li>
                     <li><a href="../files/src-media-geometry-rectangle.html"><abbr title="src/Media/Geometry/Rectangle.php">Rectangle.php</abbr></a></li>
                     <li><a href="../files/src-settings-storage-redis.html"><abbr title="src/Settings/Storage/Redis.php">Redis.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-reel.html"><abbr title="src/Response/Model/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-request-reel.html"><abbr title="src/Request/Reel.php">Reel.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-reel.html"><abbr title="src/Response/Model/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-response-reelmediaviewerresponse.html"><abbr title="src/Response/ReelMediaViewerResponse.php">ReelMediaViewerResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-reelmention.html"><abbr title="src/Response/Model/ReelMention.php">ReelMention.php</abbr></a></li>
                     <li><a href="../files/src-response-reelsettingsresponse.html"><abbr title="src/Response/ReelSettingsResponse.php">ReelSettingsResponse.php</abbr></a></li>
@@ -683,8 +684,8 @@
                     <li><a href="../files/src-settings-storageinterface.html"><abbr title="src/Settings/StorageInterface.php">StorageInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-model-stories.html"><abbr title="src/Response/Model/Stories.php">Stories.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storiesnetego.html"><abbr title="src/Response/Model/StoriesNetego.php">StoriesNetego.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-story.html"><abbr title="src/Response/Model/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-request-story.html"><abbr title="src/Request/Story.php">Story.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-story.html"><abbr title="src/Response/Model/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-response-storyanswersresponse.html"><abbr title="src/Response/StoryAnswersResponse.php">StoryAnswersResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storyappattribution.html"><abbr title="src/Response/Model/StoryAppAttribution.php">StoryAppAttribution.php</abbr></a></li>
                     <li><a href="../files/src-response-storycharitiesresponse.html"><abbr title="src/Response/StoryCharitiesResponse.php">StoryCharitiesResponse.php</abbr></a></li>
@@ -801,8 +802,8 @@
                     <li><a href="../files/src-response-model-unpredictablekeys-userunpredictablecontainer.html"><abbr title="src/Response/Model/UnpredictableKeys/UserUnpredictableContainer.php">UserUnpredictableContainer.php</abbr></a></li>
                     <li><a href="../files/src-response-usernamesuggestionsresponse.html"><abbr title="src/Response/UsernameSuggestionsResponse.php">UsernameSuggestionsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-userslookupresponse.html"><abbr title="src/Response/UsersLookupResponse.php">UsersLookupResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-request-usertag.html"><abbr title="src/Request/Usertag.php">Usertag.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-response-usertagsresponse.html"><abbr title="src/Response/UsertagsResponse.php">UsertagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-utils.html"><abbr title="src/Utils.php">Utils.php</abbr></a></li>
                 </ul>
