--- a/documentation/classes/InstagramAPI-Exception-ServerMessageThrower.html
+++ b/documentation/classes/InstagramAPI-Exception-ServerMessageThrower.html
@@ -180,6 +180,7 @@
     &#039;Checkpoint\\VerifyEmailCodeFormException&#039; =&gt; [&#039;VerifyEmailCodeForm&#039;],
     &#039;Checkpoint\\VerifySMSCodeFormException&#039; =&gt; [&#039;VerifySMSCodeForm&#039;],
     &#039;Checkpoint\\LegacyForceSetNewPasswordFormException&#039; =&gt; [&#039;LegacyForceSetNewPasswordForm&#039;],
+    &#039;Checkpoint\\ReviewContactPointChangeFormException&#039; =&gt; [&#039;ReviewContactPointChangeForm&#039;],
 ]</td>
                 </tr>
                                                                             <tr>
@@ -294,6 +295,7 @@
     &#039;Checkpoint\\VerifyEmailCodeFormException&#039; =&gt; [&#039;VerifyEmailCodeForm&#039;],
     &#039;Checkpoint\\VerifySMSCodeFormException&#039; =&gt; [&#039;VerifySMSCodeForm&#039;],
     &#039;Checkpoint\\LegacyForceSetNewPasswordFormException&#039; =&gt; [&#039;LegacyForceSetNewPasswordForm&#039;],
+    &#039;Checkpoint\\ReviewContactPointChangeFormException&#039; =&gt; [&#039;ReviewContactPointChangeForm&#039;],
 ]</span>
     </code>
         <section class="phpdocumentor-description">If the first letter of a pattern is &quot;/&quot;, we treat it as a regex.
@@ -332,7 +334,7 @@ of the API! Nothing else.</section>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Exception/ServerMessageThrower.php"><a href="../files/src-exception-servermessagethrower.html"><abbr title="src/Exception/ServerMessageThrower.php">ServerMessageThrower.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">140</span>
+        <span class="phpdocumentor-element-found-in__line">141</span>
     </aside>
         <p class="phpdocumentor-summary">Parses a server message and throws the appropriate exception.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -424,7 +426,7 @@ object (if available).</p></section></dd>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Exception/ServerMessageThrower.php"><a href="../files/src-exception-servermessagethrower.html"><abbr title="src/Exception/ServerMessageThrower.php">ServerMessageThrower.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">257</span>
+        <span class="phpdocumentor-element-found-in__line">258</span>
     </aside>
         <p class="phpdocumentor-summary">Nicely reformats externally generated exception messages.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
