--- a/documentation/packages/default.html
+++ b/documentation/packages/default.html
@@ -1496,6 +1496,8 @@ to-string and from-string methods in this class are consistent.</dd>
                 <dd>All server-response API related exceptions must derive from this class.</dd>
                             <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-LegacyForceSetNewPasswordFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\LegacyForceSetNewPasswordFormException">LegacyForceSetNewPasswordFormException</abbr></a></dt>
                 <dd>All server-response API related exceptions must derive from this class.</dd>
+                            <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-ReviewContactPointChangeFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\ReviewContactPointChangeFormException">ReviewContactPointChangeFormException</abbr></a></dt>
+                <dd>All server-response API related exceptions must derive from this class.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
