--- a/documentation/namespaces/instagramapi-exception-checkpoint.html
+++ b/documentation/namespaces/instagramapi-exception-checkpoint.html
@@ -129,6 +129,8 @@
                 <dd>All server-response API related exceptions must derive from this class.</dd>
                             <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-LegacyForceSetNewPasswordFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\LegacyForceSetNewPasswordFormException">LegacyForceSetNewPasswordFormException</abbr></a></dt>
                 <dd>All server-response API related exceptions must derive from this class.</dd>
+                            <dt><a href="../classes/InstagramAPI-Exception-Checkpoint-ReviewContactPointChangeFormException.html"><abbr title="\InstagramAPI\Exception\Checkpoint\ReviewContactPointChangeFormException">ReviewContactPointChangeFormException</abbr></a></dt>
+                <dd>All server-response API related exceptions must derive from this class.</dd>
             
                     </dl>
     
