--- a/documentation/reports/deprecated.html
+++ b/documentation/reports/deprecated.html
@@ -84,6 +84,9 @@
                     <td class="phpdocumentor-cell"><a href="#src/Request/Hashtag.php">src/Request/Hashtag.php</a></td>
                 </tr>
                             <tr>
+                    <td class="phpdocumentor-cell"><a href="#src/Request/Live.php">src/Request/Live.php</a></td>
+                </tr>
+                            <tr>
                     <td class="phpdocumentor-cell"><a href="#src/Request/TV.php">src/Request/TV.php</a></td>
                 </tr>
                             <tr>
@@ -119,6 +122,27 @@
                             <td class="phpdocumentor-cell">The feed endpoint has been removed in favor of the hashtag section API.
 This function is now just wrapping Hashtag::getSection() and will be removed shortly.
 Please use Hashtag::getSection().</td>
+                        </tr>
+                                                </table>
+                    <a id="src/Request/Live.php"></a>
+            <h3><abbr title="src/Request/Live.php">Live.php</abbr></h3>
+            <table>
+                <tr>
+                    <th class="phpdocumentor-heading">Line</th>
+                    <th class="phpdocumentor-heading">Element</th>
+                    <th class="phpdocumentor-heading">Reason</th>
+                </tr>
+                                                            <tr>
+                            <td class="phpdocumentor-cell">878</td>
+                            <td class="phpdocumentor-cell"><a href="../classes/InstagramAPI-Request-Live.html#method_addToPostLive"><abbr title="\InstagramAPI\Request\Live::addToPostLive()">normal</abbr></a></td>
+                            <td class="phpdocumentor-cell">This endpoint has been removed in favor of shareToIgtv().
+
+The broadcast must have ended before you can call this function.</td>
+                        </tr>
+                                                                                <tr>
+                            <td class="phpdocumentor-cell">899</td>
+                            <td class="phpdocumentor-cell"><a href="../classes/InstagramAPI-Request-Live.html#method_deletePostLive"><abbr title="\InstagramAPI\Request\Live::deletePostLive()">normal</abbr></a></td>
+                            <td class="phpdocumentor-cell">This endpoint has been removed, see notes of addToPostLive().</td>
                         </tr>
                                                 </table>
                     <a id="src/Request/TV.php"></a>
