--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -545,6 +545,8 @@
                 <dd>CameraModelsResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-SegmentationModelsResponse.html"><abbr title="\InstagramAPI\Response\SegmentationModelsResponse">SegmentationModelsResponse</abbr></a></dt>
                 <dd>SegmentationModelsResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-HasInteropUpgradedResponse.html"><abbr title="\InstagramAPI\Response\HasInteropUpgradedResponse">HasInteropUpgradedResponse</abbr></a></dt>
+                <dd>HasInteropUpgradedResponse.</dd>
             
                     </dl>
     
