--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -116,8 +116,8 @@
                     <li><a href="../files/src-response-model-assetmodel.html"><abbr title="src/Response/Model/AssetModel.php">AssetModel.php</abbr></a></li>
                     <li><a href="../files/src-response-model-attribution.html"><abbr title="src/Response/Model/Attribution.php">Attribution.php</abbr></a></li>
                     <li><a href="../files/src-response-model-audiocontext.html"><abbr title="src/Response/Model/AudioContext.php">AudioContext.php</abbr></a></li>
-                    <li><a href="../files/src-realtime-mqtt-auth.html"><abbr title="src/Realtime/Mqtt/Auth.php">Auth.php</abbr></a></li>
                     <li><a href="../files/src-push-fbns-auth.html"><abbr title="src/Push/Fbns/Auth.php">Auth.php</abbr></a></li>
+                    <li><a href="../files/src-realtime-mqtt-auth.html"><abbr title="src/Realtime/Mqtt/Auth.php">Auth.php</abbr></a></li>
                     <li><a href="../files/src-response-model-authorizationheader.html"><abbr title="src/Response/Model/AuthorizationHeader.php">AuthorizationHeader.php</abbr></a></li>
                     <li><a href="../files/src-autopropertymapper.html"><abbr title="src/AutoPropertyMapper.php">AutoPropertyMapper.php</abbr></a></li>
                     <li><a href="../files/src-response-model-aymf.html"><abbr title="src/Response/Model/Aymf.php">Aymf.php</abbr></a></li>
@@ -198,9 +198,9 @@
                     <li><a href="../files/src-response-model-closefriends.html"><abbr title="src/Response/Model/CloseFriends.php">CloseFriends.php</abbr></a></li>
                     <li><a href="../files/src-response-closefriendsresponse.html"><abbr title="src/Response/CloseFriendsResponse.php">CloseFriendsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-cluster.html"><abbr title="src/Response/Model/Cluster.php">Cluster.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-bloks-collection.html"><abbr title="src/Response/Model/Bloks/Collection.php">Collection.php</abbr></a></li>
-                    <li><a href="../files/src-request-collection.html"><abbr title="src/Request/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-model-collection.html"><abbr title="src/Response/Model/Collection.php">Collection.php</abbr></a></li>
+                    <li><a href="../files/src-request-collection.html"><abbr title="src/Request/Collection.php">Collection.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-bloks-collection.html"><abbr title="src/Response/Model/Bloks/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-collectionfeedresponse.html"><abbr title="src/Response/CollectionFeedResponse.php">CollectionFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-realtime-commandinterface.html"><abbr title="src/Realtime/CommandInterface.php">CommandInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-model-comment.html"><abbr title="src/Response/Model/Comment.php">Comment.php</abbr></a></li>
@@ -377,8 +377,9 @@
         <ul class="phpdocumentor-list">
                     <li><a href="../files/src-realtime-handler-handlerexception.html"><abbr title="src/Realtime/Handler/HandlerException.php">HandlerException.php</abbr></a></li>
                     <li><a href="../files/src-realtime-handlerinterface.html"><abbr title="src/Realtime/HandlerInterface.php">HandlerInterface.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-hashtag.html"><abbr title="src/Response/Model/Hashtag.php">Hashtag.php</abbr></a></li>
+                    <li><a href="../files/src-response-hasinteropupgradedresponse.html"><abbr title="src/Response/HasInteropUpgradedResponse.php">HasInteropUpgradedResponse.php</abbr></a></li>
                     <li><a href="../files/src-request-hashtag.html"><abbr title="src/Request/Hashtag.php">Hashtag.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-hashtag.html"><abbr title="src/Response/Model/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-hashtagfollow.html"><abbr title="src/Response/Model/HashtagFollow.php">HashtagFollow.php</abbr></a></li>
                     <li><a href="../files/src-response-hashtagsresponse.html"><abbr title="src/Response/HashtagsResponse.php">HashtagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-headline.html"><abbr title="src/Response/Model/Headline.php">Headline.php</abbr></a></li>
@@ -411,8 +412,8 @@
                     <li><a href="../files/src-media-photo-instagramphoto.html"><abbr title="src/Media/Photo/InstagramPhoto.php">InstagramPhoto.php</abbr></a></li>
                     <li><a href="../files/src-media-video-instagramthumbnail.html"><abbr title="src/Media/Video/InstagramThumbnail.php">InstagramThumbnail.php</abbr></a></li>
                     <li><a href="../files/src-media-video-instagramvideo.html"><abbr title="src/Media/Video/InstagramVideo.php">InstagramVideo.php</abbr></a></li>
-                    <li><a href="../files/src-request-metadata-internal.html"><abbr title="src/Request/Metadata/Internal.php">Internal.php</abbr></a></li>
                     <li><a href="../files/src-request-internal.html"><abbr title="src/Request/Internal.php">Internal.php</abbr></a></li>
+                    <li><a href="../files/src-request-metadata-internal.html"><abbr title="src/Request/Metadata/Internal.php">Internal.php</abbr></a></li>
                     <li><a href="../files/src-exception-internalexception.html"><abbr title="src/Exception/InternalException.php">InternalException.php</abbr></a></li>
                     <li><a href="../files/src-exception-invalidsmscodeexception.html"><abbr title="src/Exception/InvalidSmsCodeException.php">InvalidSmsCodeException.php</abbr></a></li>
                     <li><a href="../files/src-exception-invaliduserexception.html"><abbr title="src/Exception/InvalidUserException.php">InvalidUserException.php</abbr></a></li>
@@ -466,8 +467,8 @@
         <ul class="phpdocumentor-list">
                     <li><a href="../files/src-realtime-command-direct-markseen.html"><abbr title="src/Realtime/Command/Direct/MarkSeen.php">MarkSeen.php</abbr></a></li>
                     <li><a href="../files/src-response-model-megraphdata.html"><abbr title="src/Response/Model/MeGraphData.php">MeGraphData.php</abbr></a></li>
-                    <li><a href="../files/src-request-media.html"><abbr title="src/Request/Media.php">Media.php</abbr></a></li>
                     <li><a href="../files/src-response-model-media.html"><abbr title="src/Response/Model/Media.php">Media.php</abbr></a></li>
+                    <li><a href="../files/src-request-media.html"><abbr title="src/Request/Media.php">Media.php</abbr></a></li>
                     <li><a href="../files/src-response-mediacommentrepliesresponse.html"><abbr title="src/Response/MediaCommentRepliesResponse.php">MediaCommentRepliesResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-mediacommentsresponse.html"><abbr title="src/Response/MediaCommentsResponse.php">MediaCommentsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-mediacroppinginfo.html"><abbr title="src/Response/Model/MediaCroppingInfo.php">MediaCroppingInfo.php</abbr></a></li>
@@ -558,8 +559,8 @@
                     <li><a href="../files/src-response-model-producttags.html"><abbr title="src/Response/Model/ProductTags.php">ProductTags.php</abbr></a></li>
                     <li><a href="../files/src-response-profilenoticeresponse.html"><abbr title="src/Response/ProfileNoticeResponse.php">ProfileNoticeResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-promotionsunit.html"><abbr title="src/Response/Model/PromotionsUnit.php">PromotionsUnit.php</abbr></a></li>
-                    <li><a href="../files/src-request-push.html"><abbr title="src/Request/Push.php">Push.php</abbr></a></li>
                     <li><a href="../files/src-push.html"><abbr title="src/Push.php">Push.php</abbr></a></li>
+                    <li><a href="../files/src-request-push.html"><abbr title="src/Request/Push.php">Push.php</abbr></a></li>
                     <li><a href="../files/src-response-pushpreferencesresponse.html"><abbr title="src/Response/PushPreferencesResponse.php">PushPreferencesResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-pushregisterresponse.html"><abbr title="src/Response/PushRegisterResponse.php">PushRegisterResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-pushsettings.html"><abbr title="src/Response/Model/PushSettings.php">PushSettings.php</abbr></a></li>
@@ -666,8 +667,8 @@
                     <li><a href="../files/src-response-model-sharedfollower.html"><abbr title="src/Response/Model/SharedFollower.php">SharedFollower.php</abbr></a></li>
                     <li><a href="../files/src-response-model-sharedfolloweraccountsinfo.html"><abbr title="src/Response/Model/SharedFollowerAccountsInfo.php">SharedFollowerAccountsInfo.php</abbr></a></li>
                     <li><a href="../files/src-response-sharedfollowersresponse.html"><abbr title="src/Response/SharedFollowersResponse.php">SharedFollowersResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
+                    <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shoppingtype.html"><abbr title="src/Response/Model/ShoppingType.php">ShoppingType.php</abbr></a></li>
                     <li><a href="../files/src-response-shouldrequireprofessionalaccountresponse.html"><abbr title="src/Response/ShouldRequireProfessionalAccountResponse.php">ShouldRequireProfessionalAccountResponse.php</abbr></a></li>
                     <li><a href="../files/src-signatures.html"><abbr title="src/Signatures.php">Signatures.php</abbr></a></li>
@@ -803,8 +804,8 @@
                     <li><a href="../files/src-response-model-unpredictablekeys-userunpredictablecontainer.html"><abbr title="src/Response/Model/UnpredictableKeys/UserUnpredictableContainer.php">UserUnpredictableContainer.php</abbr></a></li>
                     <li><a href="../files/src-response-usernamesuggestionsresponse.html"><abbr title="src/Response/UsernameSuggestionsResponse.php">UsernameSuggestionsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-userslookupresponse.html"><abbr title="src/Response/UsersLookupResponse.php">UsersLookupResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-usertag.html"><abbr title="src/Request/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
+                    <li><a href="../files/src-request-usertag.html"><abbr title="src/Request/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-response-usertagsresponse.html"><abbr title="src/Response/UsertagsResponse.php">UsertagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-utils.html"><abbr title="src/Utils.php">Utils.php</abbr></a></li>
                 </ul>
