--- a/documentation/classes/InstagramAPI-Request-Internal.html
+++ b/documentation/classes/InstagramAPI-Request-Internal.html
@@ -2520,7 +2520,7 @@ you have 18 years old or more.</p></section>
                     <span class="phpdocumentor-tag__name">throws</span>
                 </dt>
                 <dd class="phpdocumentor-tag-list__definition">
-                                                                <span class="phpdocumentor-tag-link"><abbr title="\InstagramAPI\Exception\InvalidArgumentException">InvalidArgumentException</abbr></span>
+                                                                <span class="phpdocumentor-tag-link"><a href="../classes/InstagramAPI-Exception-InvalidArgumentException.html"><abbr title="\InstagramAPI\Exception\InvalidArgumentException">InvalidArgumentException</abbr></a></span>
                                                                                 <section class="phpdocumentor-description"></section>
                 </dd>
                         </dl>
