--- a/documentation/classes/InstagramAPI-Request-Web.html
+++ b/documentation/classes/InstagramAPI-Request-Web.html
@@ -961,7 +961,7 @@
                             </span>
                     <span class="phpdocumentor-signature__argument">
             ,                 <span class="phpdocumentor-signature__argument__name">$variables</span> :
-                <span class="phpdocumentor-signature__argument__return-type">string</span>
+                <span class="phpdocumentor-signature__argument__return-type">array</span>
                             </span>
                 )
         : <span class="phpdocumentor-signature__response_type"><a href="../classes/InstagramAPI-Response-WebUserInfoResponse.html"><abbr title="\InstagramAPI\Response\WebUserInfoResponse">WebUserInfoResponse</abbr></a></span>
@@ -977,7 +977,7 @@
                 <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"><p>Query hash.</p></section></dd>
                             <dt class="phpdocumentor-argument-list__entry">
                     <span class="phpdocumentor-signature__argument__name">$variables</span>
-                    : <span class="phpdocumentor-signature__argument__return-type">string</span>
+                    : <span class="phpdocumentor-signature__argument__return-type">array</span>
                                     </dt>
                 <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"><p>Variables.</p></section></dd>
                     </dl>
