--- a/documentation/namespaces/instagramapi-exception.html
+++ b/documentation/namespaces/instagramapi-exception.html
@@ -129,6 +129,8 @@ to be processed by Instagram&#039;s server.</dd>
 because of too many requests. You must slow yourself down!</dd>
                             <dt><a href="../classes/InstagramAPI-Exception-UploadFailedException.html"><abbr title="\InstagramAPI\Exception\UploadFailedException">UploadFailedException</abbr></a></dt>
                 <dd>Used when we know for a fact that our uploads failed.</dd>
+                            <dt><a href="../classes/InstagramAPI-Exception-InvalidArgumentException.html"><abbr title="\InstagramAPI\Exception\InvalidArgumentException">InvalidArgumentException</abbr></a></dt>
+                <dd>Used when we know the argument provided is wrong.</dd>
             
                     </dl>
     
