--- a/documentation/packages/default.html
+++ b/documentation/packages/default.html
@@ -1500,6 +1500,8 @@ to-string and from-string methods in this class are consistent.</dd>
                 <dd>All server-response API related exceptions must derive from this class.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-HasInteropUpgradedResponse.html"><abbr title="\InstagramAPI\Response\HasInteropUpgradedResponse">HasInteropUpgradedResponse</abbr></a></dt>
                 <dd>HasInteropUpgradedResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Exception-InvalidArgumentException.html"><abbr title="\InstagramAPI\Exception\InvalidArgumentException">InvalidArgumentException</abbr></a></dt>
+                <dd>Used when we know the argument provided is wrong.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
