--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -198,9 +198,9 @@
                     <li><a href="../files/src-response-model-closefriends.html"><abbr title="src/Response/Model/CloseFriends.php">CloseFriends.php</abbr></a></li>
                     <li><a href="../files/src-response-closefriendsresponse.html"><abbr title="src/Response/CloseFriendsResponse.php">CloseFriendsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-cluster.html"><abbr title="src/Response/Model/Cluster.php">Cluster.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-collection.html"><abbr title="src/Response/Model/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-request-collection.html"><abbr title="src/Request/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-collection.html"><abbr title="src/Response/Model/Bloks/Collection.php">Collection.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-collection.html"><abbr title="src/Response/Model/Collection.php">Collection.php</abbr></a></li>
                     <li><a href="../files/src-response-collectionfeedresponse.html"><abbr title="src/Response/CollectionFeedResponse.php">CollectionFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-realtime-commandinterface.html"><abbr title="src/Realtime/CommandInterface.php">CommandInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-model-comment.html"><abbr title="src/Response/Model/Comment.php">Comment.php</abbr></a></li>
@@ -378,8 +378,8 @@
                     <li><a href="../files/src-realtime-handler-handlerexception.html"><abbr title="src/Realtime/Handler/HandlerException.php">HandlerException.php</abbr></a></li>
                     <li><a href="../files/src-realtime-handlerinterface.html"><abbr title="src/Realtime/HandlerInterface.php">HandlerInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-hasinteropupgradedresponse.html"><abbr title="src/Response/HasInteropUpgradedResponse.php">HasInteropUpgradedResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-hashtag.html"><abbr title="src/Request/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-hashtag.html"><abbr title="src/Response/Model/Hashtag.php">Hashtag.php</abbr></a></li>
+                    <li><a href="../files/src-request-hashtag.html"><abbr title="src/Request/Hashtag.php">Hashtag.php</abbr></a></li>
                     <li><a href="../files/src-response-model-hashtagfollow.html"><abbr title="src/Response/Model/HashtagFollow.php">HashtagFollow.php</abbr></a></li>
                     <li><a href="../files/src-response-hashtagsresponse.html"><abbr title="src/Response/HashtagsResponse.php">HashtagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-headline.html"><abbr title="src/Response/Model/Headline.php">Headline.php</abbr></a></li>
@@ -412,9 +412,10 @@
                     <li><a href="../files/src-media-photo-instagramphoto.html"><abbr title="src/Media/Photo/InstagramPhoto.php">InstagramPhoto.php</abbr></a></li>
                     <li><a href="../files/src-media-video-instagramthumbnail.html"><abbr title="src/Media/Video/InstagramThumbnail.php">InstagramThumbnail.php</abbr></a></li>
                     <li><a href="../files/src-media-video-instagramvideo.html"><abbr title="src/Media/Video/InstagramVideo.php">InstagramVideo.php</abbr></a></li>
-                    <li><a href="../files/src-request-internal.html"><abbr title="src/Request/Internal.php">Internal.php</abbr></a></li>
                     <li><a href="../files/src-request-metadata-internal.html"><abbr title="src/Request/Metadata/Internal.php">Internal.php</abbr></a></li>
+                    <li><a href="../files/src-request-internal.html"><abbr title="src/Request/Internal.php">Internal.php</abbr></a></li>
                     <li><a href="../files/src-exception-internalexception.html"><abbr title="src/Exception/InternalException.php">InternalException.php</abbr></a></li>
+                    <li><a href="../files/src-exception-invalidargumentexception.html"><abbr title="src/Exception/InvalidArgumentException.php">InvalidArgumentException.php</abbr></a></li>
                     <li><a href="../files/src-exception-invalidsmscodeexception.html"><abbr title="src/Exception/InvalidSmsCodeException.php">InvalidSmsCodeException.php</abbr></a></li>
                     <li><a href="../files/src-exception-invaliduserexception.html"><abbr title="src/Exception/InvalidUserException.php">InvalidUserException.php</abbr></a></li>
                     <li><a href="../files/src-realtime-handler-irishandler.html"><abbr title="src/Realtime/Handler/IrisHandler.php">IrisHandler.php</abbr></a></li>
@@ -446,8 +447,8 @@
                     <li><a href="../files/src-realtime-subscription-skywalker-livesubscription.html"><abbr title="src/Realtime/Subscription/Skywalker/LiveSubscription.php">LiveSubscription.php</abbr></a></li>
                     <li><a href="../files/src-response-model-livevideoshare.html"><abbr title="src/Response/Model/LiveVideoShare.php">LiveVideoShare.php</abbr></a></li>
                     <li><a href="../files/src-response-model-liveviewerinvite.html"><abbr title="src/Response/Model/LiveViewerInvite.php">LiveViewerInvite.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-location.html"><abbr title="src/Response/Model/Location.php">Location.php</abbr></a></li>
                     <li><a href="../files/src-request-location.html"><abbr title="src/Request/Location.php">Location.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-location.html"><abbr title="src/Response/Model/Location.php">Location.php</abbr></a></li>
                     <li><a href="../files/src-response-locationfeedresponse.html"><abbr title="src/Response/LocationFeedResponse.php">LocationFeedResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-locationinforesponse.html"><abbr title="src/Response/LocationInfoResponse.php">LocationInfoResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-locationitem.html"><abbr title="src/Response/Model/LocationItem.php">LocationItem.php</abbr></a></li>
@@ -595,8 +596,8 @@
                     <li><a href="../files/src-response-recoveryresponse.html"><abbr title="src/Response/RecoveryResponse.php">RecoveryResponse.php</abbr></a></li>
                     <li><a href="../files/src-media-geometry-rectangle.html"><abbr title="src/Media/Geometry/Rectangle.php">Rectangle.php</abbr></a></li>
                     <li><a href="../files/src-settings-storage-redis.html"><abbr title="src/Settings/Storage/Redis.php">Redis.php</abbr></a></li>
-                    <li><a href="../files/src-request-reel.html"><abbr title="src/Request/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-response-model-reel.html"><abbr title="src/Response/Model/Reel.php">Reel.php</abbr></a></li>
+                    <li><a href="../files/src-request-reel.html"><abbr title="src/Request/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-response-reelmediaviewerresponse.html"><abbr title="src/Response/ReelMediaViewerResponse.php">ReelMediaViewerResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-reelmention.html"><abbr title="src/Response/Model/ReelMention.php">ReelMention.php</abbr></a></li>
                     <li><a href="../files/src-response-reelsettingsresponse.html"><abbr title="src/Response/ReelSettingsResponse.php">ReelSettingsResponse.php</abbr></a></li>
@@ -667,8 +668,8 @@
                     <li><a href="../files/src-response-model-sharedfollower.html"><abbr title="src/Response/Model/SharedFollower.php">SharedFollower.php</abbr></a></li>
                     <li><a href="../files/src-response-model-sharedfolloweraccountsinfo.html"><abbr title="src/Response/Model/SharedFollowerAccountsInfo.php">SharedFollowerAccountsInfo.php</abbr></a></li>
                     <li><a href="../files/src-response-sharedfollowersresponse.html"><abbr title="src/Response/SharedFollowersResponse.php">SharedFollowersResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shoppingtype.html"><abbr title="src/Response/Model/ShoppingType.php">ShoppingType.php</abbr></a></li>
                     <li><a href="../files/src-response-shouldrequireprofessionalaccountresponse.html"><abbr title="src/Response/ShouldRequireProfessionalAccountResponse.php">ShouldRequireProfessionalAccountResponse.php</abbr></a></li>
                     <li><a href="../files/src-signatures.html"><abbr title="src/Signatures.php">Signatures.php</abbr></a></li>
@@ -686,8 +687,8 @@
                     <li><a href="../files/src-settings-storageinterface.html"><abbr title="src/Settings/StorageInterface.php">StorageInterface.php</abbr></a></li>
                     <li><a href="../files/src-response-model-stories.html"><abbr title="src/Response/Model/Stories.php">Stories.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storiesnetego.html"><abbr title="src/Response/Model/StoriesNetego.php">StoriesNetego.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-story.html"><abbr title="src/Response/Model/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-request-story.html"><abbr title="src/Request/Story.php">Story.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-story.html"><abbr title="src/Response/Model/Story.php">Story.php</abbr></a></li>
                     <li><a href="../files/src-response-storyanswersresponse.html"><abbr title="src/Response/StoryAnswersResponse.php">StoryAnswersResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-storyappattribution.html"><abbr title="src/Response/Model/StoryAppAttribution.php">StoryAppAttribution.php</abbr></a></li>
                     <li><a href="../files/src-response-storycharitiesresponse.html"><abbr title="src/Response/StoryCharitiesResponse.php">StoryCharitiesResponse.php</abbr></a></li>
@@ -804,8 +805,8 @@
                     <li><a href="../files/src-response-model-unpredictablekeys-userunpredictablecontainer.html"><abbr title="src/Response/Model/UnpredictableKeys/UserUnpredictableContainer.php">UserUnpredictableContainer.php</abbr></a></li>
                     <li><a href="../files/src-response-usernamesuggestionsresponse.html"><abbr title="src/Response/UsernameSuggestionsResponse.php">UsernameSuggestionsResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-userslookupresponse.html"><abbr title="src/Response/UsersLookupResponse.php">UsersLookupResponse.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-request-usertag.html"><abbr title="src/Request/Usertag.php">Usertag.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-usertag.html"><abbr title="src/Response/Model/Usertag.php">Usertag.php</abbr></a></li>
                     <li><a href="../files/src-response-usertagsresponse.html"><abbr title="src/Response/UsertagsResponse.php">UsertagsResponse.php</abbr></a></li>
                     <li><a href="../files/src-utils.html"><abbr title="src/Utils.php">Utils.php</abbr></a></li>
                 </ul>
